# computational-biology

./: .ycm_extra_conf.py  CMakeLists.txt
libcompbio/: alignment.cpp  alignment.h  alphabet.cpp  alphabet.h  exceptions.h  sequence.cpp  sequence.h  utils.cpp  utils.h
libcompbio/alignment/: base.cpp  base.h  hirschberg.cpp  hirschberg.h  needleman-wunsch.cpp  needleman-wunsch.h  smith-waterman.cpp  smith-waterman.h
libcompbio/alphabets/: dna.cpp  dna.h
src/: .main.cpp.swp  hirschberg.cpp  local-alignment.cpp  main.cpp  needleman-wunsch.cpp
